# pydantic-duckdb

./: .python-version  README.md  pyproject.toml
app/: funcao.py
exemplo/: exemplo01.py  inferred_schema.py
tests/: test_funcao_ola.py
